
	* gnus-int.el (gnus-after-set-mark-hook, gnus-before-update-mark-hook):
	Hooks for mark updates.
	(gnus-request-set-mark, gnus-request-update-mark): Use them.

	* gnus-util.el (gnus-run-hooks-with-args): Convenience function to run
	hooks with arguments, which is needed for mark update hooks.

2010-10-06  Julien Danjou  <julien@danjou.info>

	* sieve-manage.el: Update example in `Commentary'.

	* sieve.el (sieve-open-server): Use sieve-manage-authenticate.

	* sieve-manage.el (sieve-manage-open): Use sieve-manage-default-port,
	not 2000.
	(sieve-manage-authenticate): Re-add function.

2010-10-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): Get 'space transition right.
	(shr-render-td): Only delete space at the end of the TD.

	* nnimap.el (nnimap-open-connection): Prepare to support
	open-gnutls-stream.

	* shr.el: Rearrange function order to be more logical.

2010-10-06  Julien Danjou  <julien@danjou.info>

	* nnrss.el (nnrss-check-group): Remove 404 URL in comment.
	(nnrss-discover-feed): Remove 404 URL in docstring.

	* nnir.el: Fix Swish-E URL.
	Fix Namazu URL.

	* message.el (message-change-subject): Remove 404 URL in a comment.

2010-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-view-part-as-type): Make it work when being
	called interactively.

	* gnus-util.el (gnus-remove-if): Allow hash table.
	(gnus-remove-if-not): New function.

	* gnus-art.el (gnus-mime-view-part-as-type)
	* gnus-score.el (gnus-summary-score-effect)
	* gnus-sum.el (gnus-read-move-group-name):
	Replace remove-if-not with gnus-remove-if-not.

	* gnus-group.el (gnus-group-completing-read):
	Regard collection as a hash table if it is not a list.

2010-10-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-render-td): Allow blank/missing <TD>s.

	* shr.el: Document the table-rendering algorithm.

	* gnus-html.el (gnus-html-schedule-image-fetching): Protect against
	invalid URLs.
